# SMART_LMS

./: .replit  db.sqlite3  manage.py  pyproject.toml  replit.nix
accounts/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  __init__.py
ai_assistant/: admin.py  forms.py  models.py  services.py  urls.py  views.py
ai_assistant/migrations/: 0001_initial.py
core/: models.py  urls.py  views.py
courses/: admin.py  forms.py  models.py  urls.py  views.py
courses/migrations/: 0001_initial.py  __init__.py
dashboard/: admin.py  models.py  urls.py  views.py
dashboard/migrations/: 0001_initial.py  __init__.py
forums/: admin.py  forms.py  models.py  urls.py  views.py
forums/migrations/: 0001_initial.py
messaging/: admin.py  forms.py  models.py  urls.py  views.py
messaging/migrations/: 0001_initial.py
smartproject/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
static/css/: dashboard.css  main.css  styles.css
static/js/: main.js
templates/: base.html
templates/accounts/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  profile.html  profile_edit.html  register.html  signup.html
templates/ai_assistant/: assistant_confirm_delete.html  assistant_detail.html  assistant_form.html  assistant_list.html  conversation_detail.html
templates/core/: dashboard.html  home.html
templates/courses/: assignment_create.html  assignment_delete.html  assignment_detail.html  (+16 more)
uni_online/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
(+5 files in other folders)
